# Vocal_Maestro_Robot_System

./: README.md  settings.json
turtlebot_dashboard/: robotcontrol.cpp  robotcontrol.h
turtlebot_map_viewer/: CMakeLists.txt  dbclient.cpp  dbclient.h  main.cpp  mainwindow.cpp  mainwindow.h
turtlebot_map_viewer_com/: CMakeLists.txt  CMakeLists.txt.user.8869cf8  dbclient.cpp  main.cpp  mainwindow.cpp  mainwindow.h  package.xml
turtlebot_ui/: CMakeLists.txt  dbclient.cpp  dbclient.h  main.cpp  widget.cpp  widget.h
voice recognition/: alexa_system.py
유상ver/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
