<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot_map_viewer</name>
  <version>0.1.0</version>
  <description>TurtleBot3 map viewer using RViz2 embedded in Qt5</description>
  <maintainer email="ubuntu00@todo.todo">ubuntu00</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
